--- a/src/Makefile.qttest.include
+++ b/src/Makefile.qttest.include
@@ -4,7 +4,7 @@ TESTS += qt/test/test_dash-qt
 TEST_QT_MOC_CPP = \
   qt/test/moc_compattests.cpp \
   qt/test/moc_trafficgraphdatatests.cpp \
-  qt/test/moc_uritests.cpp 
+  qt/test/moc_uritests.cpp
 
 if ENABLE_WALLET
 TEST_QT_MOC_CPP += qt/test/moc_paymentservertests.cpp
@@ -43,7 +43,12 @@ endif
 qt_test_test_dash_qt_LDADD += $(LIBBITCOIN_CLI) $(LIBBITCOIN_COMMON) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) \
   $(LIBMEMENV) $(BOOST_LIBS) $(QT_DBUS_LIBS) $(QT_TEST_LIBS) $(QT_LIBS) \
   $(QR_LIBS) $(PROTOBUF_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(LIBSECP256K1) \
-  $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS)
+  $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS) \
+  $(LIBZCASH) \
+	$(LIBSNARK) \
+  $(LIBBITCOIN_CRYPTO) \
+	$(LIBZCASH_LIBS)
+
 qt_test_test_dash_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
 qt_test_test_dash_qt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
