--- a/src/snark/Makefile
+++ b/src/snark/Makefile
@@ -10,6 +10,8 @@
 CURVE = BN128
 OPTFLAGS = -O2 -march=native -mtune=native
 FEATUREFLAGS = -DUSE_ASM -DMONTGOMERY_OUTPUT
+DEBUG = 
+CPPDEBUG = 
 
 # Initialize this using "CXXFLAGS=... make". The makefile appends to that.
 CXXFLAGS += -std=c++11 -Wall -Wextra -Wno-unused-parameter -Wno-comment -Wfatal-errors $(OPTFLAGS) $(FEATUREFLAGS) -DCURVE_$(CURVE)
